# car_semantic_segmentation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/app/: interface_main.py
src/process/: process.py
